--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"/>
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Template for VK Mini Apps fast start." />
+    <meta name="description" content="Template for VK Mini Apps." />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
     <title>Mini Apps template</title>
   </head>
