--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"/>
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Template for VK Mini Apps."/>
-    <title>Mini Apps template</title>
+    <meta name="description" content="VK Mini Apps Application"/>
+    <title>VK Mini Apps Application</title>
     <style>
         :root {
             --safe-area-inset-top: env(safe-area-inset-top, 0px);
