Moved fonts data away from JS to CSS file to optimize assets loading

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             --safe-area-inset-left: env(safe-area-inset-left, 0px);
         }
     </style>
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css"/>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
